--- a/style.css
+++ b/style.css
@@ -19,9 +19,9 @@ html, body {
 }
 
 body {
-    margin: -85px 0 0 0;
-    background-image: url(bg.png);
-    background-size: cover;
+    margin: -5vw 0 0 0;
+    background-image: url(bgn.png);
+    background-size: 100%;
     background-repeat: no-repeat;
     background-color: var(--dark-blue);
     font-family: 'Montserrat', sans-serif;
@@ -48,20 +48,6 @@ a {
     font-size: 1.8vw;
     text-align: left;
     color: var(--pink);
-}
-
-@media only screen and (max-width: 550px) {
-    body {
-        margin: 0;
-        background-size:100%;
-    }
-    svg {
-        height: 400px;
-        margin-left: -85px;
-    }
-    .topdiv {
-        font-size: 15px;
-    }
 }
 
 /* typing text animation start */
@@ -161,45 +147,57 @@ a {
     to { opacity: 100% }
 }
 
-@media only screen and (max-width: 550px) {
+
+@media only screen and (max-width: 1410px) {
+    .middiv {
+        height: 0;
+    }
+    .middiv2 {
+        height: 10px;
+    }
+    .topdiv {
+        height: 80vw;
+    }
+    body {
+        margin-top: -50px;
+    }
     .c1 {
         position: absolute;
-        top: 15%;
-        left: 19%;
+        top: 18%;
+        left: 30%;
     }
     
     .c2 {
         position: absolute;
-        top: 18%;
-        left: 19%;
+        top: 21%;
+        left: 30%;
     } 
     
     .c3 {
         position: absolute;
-        top: 21%;
-        left: 19%;
+        top: 24%;
+        left: 30%;
     }
     
     .c4 {
         position: absolute;
-        top: 24%;
-        left: 19%;
+        top: 27%;
+        left: 30%;
     }
     
     .c5 {
         position: absolute;
-        top: 38%;
+        top: 41%;
         left: 50%;
         transform: translate(-50%, -50%);
     }
-    
 }
 
 
 /* typing text animation end */
 
 .middiv {
-    height: 300px;
+    height: 15vw;
     background-color: var(--beige);
 }
 
@@ -208,14 +206,64 @@ a {
     background-color: var(--brown);
 }
 
-@media only screen and (max-width: 550px) {
-    .middiv {
-        height: 0;
+
+@media only screen and (max-width: 800px) {
+    body {
+        background-image: url(bgmob.png);
+        margin: 0;
+    }
+    svg {
+        height: 0vw;
+        margin-left: -10px;
+        margin-top: -50px;
+    }
+    .topdiv {
+        font-size: 4vw;
+        height: 100vw;
+        color: var(--beige);
     }
     .middiv2 {
-        height: 10px;
+        height: 2vw;
     }
 }
+
+
+/* mobile */
+
+@media only screen and (max-width: 800px) {
+    .c1 {
+        position: absolute;
+        top: 15%;
+        left: 10%;
+    }
+    
+    .c2 {
+        position: absolute;
+        top: 19%;
+        left: 10%;
+    } 
+    
+    .c3 {
+        position: absolute;
+        top: 23%;
+        left: 10%;
+    }
+    
+    .c4 {
+        position: absolute;
+        top: 27%;
+        left: 10%;
+    }
+    
+    .c5 {
+        position: absolute;
+        top: 39%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    
+}
+
 
 /* sections */
 
@@ -256,7 +304,7 @@ a {
     vertical-align: bottom;
 }
 
-@media only screen and (max-width: 550px) {
+@media only screen and (max-width: 800px) {
     .title {
         font-size: 20px;
     }
@@ -295,7 +343,7 @@ a {
     margin-top: -3vw;
 }
 
-@media only screen and (max-width: 550px) {
+@media only screen and (max-width: 800px) {
     .info-container {
         grid-template-columns: 1fr;
         grid-template-rows: 0.5fr 0.5fr;
@@ -304,7 +352,7 @@ a {
     #column1 {
         padding-right: 0;
         padding-bottom: 30px;
-        font-size: 15px;
+        font-size: 3vw;
     }
     .about-container {
         height: 70vw;
@@ -402,7 +450,7 @@ a {
     margin-top: -1vw;
 }
 
-@media only screen and (max-width: 550px) {
+@media only screen and (max-width: 800px) {
     .skills-container {
         height: 250px;
         margin-bottom: -30px;
@@ -413,6 +461,10 @@ a {
     }
     #skills-subtitle2 {
         font-size: 13px;
+    }
+    .skills-container {
+        background-image: url(skills-bg.png);
+        background-size: 100% 100%;
     }
 }
 
@@ -446,7 +498,7 @@ a {
 }
 
 .proj-col img {
-    float: right;
+    float: center;
     height: 10vw;
     width: 18.5vw;
     border: 0.35vw solid var(--pink);
@@ -476,18 +528,13 @@ a {
     opacity: 70%;
   }
 
-@media only screen and (max-width: 550px) {
-    .proj-col {
-        width: 50%;
-    }
-    .proj-col img {
-        height: 20vw;
-        width: 37vw;
-    }
+@media only screen and (max-width: 800px) {
     .overlay {
-        height: 20vw;
-        width: 37vw;
-        margin-left: 5.2vw;
+        background-color: transparent;
+    }
+    .proj-col:hover .overlay {
+        visibility: visible;
+        opacity: 0%;
     }
 }
 
@@ -542,6 +589,18 @@ a {
     text-align: left;
 }
 
+@media only screen and (max-width: 800px) {
+    .exp-title {
+        font-size: 2.2vw;
+    }
+    .exp-content {
+        font-size: 2vw;
+    }
+    .date {
+        font-size: 2.1vw;
+    }
+}
+
 /* achievements */
 
 .achievements-container{
@@ -583,7 +642,19 @@ a {
 .awards li {
     padding-top: 1vw;
 }
-/* icons */
+
+@media only screen and (max-width: 800px) {
+    .achievements-subtitle {
+        font-size: 3.4vw;
+    }
+    .scores th {
+        font-size: 2.5vw;
+    }
+    .awards {
+        font-size: 2.4vw;
+    }
+}
+
 
 /* contact */
 
@@ -600,6 +671,11 @@ a {
     font-size: 1.5vw;
 }
 
+.contact-icons {
+    text-decoration: none;
+    color: var(--pink);
+}
+
 .contact i {
     font-size: 5vw;
 }
@@ -613,6 +689,17 @@ a {
     text-decoration: underline;
     font-size: 1.2vw;
 }
+
+
+@media only screen and (max-width: 800px) {
+    .contact th {
+        font-size: 3.6vw;
+    }
+    .links a {
+        font-size: 1.6vw;
+    }
+}
+
 
 /* footer */
 
