--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ html, body {
     scroll-behavior: smooth;
 }
 
+
 body {
     margin: -5vw 0 0 0;
     background-image: url(bgn.png);
@@ -448,6 +449,10 @@ a {
     float: right;
     width: 10%;
     margin-top: -1vw;
+}
+
+.devicon-postgresql-plain {
+    text-align: left;
 }
 
 @media only screen and (max-width: 800px) {
