--- a/style.css
+++ b/style.css
@@ -248,6 +248,7 @@ a {
     }
     .topdiv {
         font-size: 4vw;
+        font-weight: 450;
         height: 100vw;
         color: var(--beige);
     }
